crates/toml_edit/tests/snapshots/invalid/string/bad-byte-escape.stderr
TOML parse error at line 1, column 15
  |
1 | naughty = "\xAg"
  |               ^
too few unicode value digits, expected unicode hexadecimal value
